fixed top on non mobile

--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -62,6 +62,7 @@
             padding: 0;
             position: relative;
             right: inherit;
+            top: 0;
     
             .menu-item {
                 padding: 5px 10px;
